Bug 137403 - Keys list box fills in customization keyboard tab page when focus is in Function list box and a key is pressed (Gtk3 only)
Summary: Keys list box fills in customization keyboard tab page when focus is in Funct...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All Linux (All)
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords:
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2020-10-12 02:49 UTC by Jim Raykowski
Modified: 2020-11-17 16:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
incorrect keys list box fill (54.39 KB, image/png)
2020-10-12 02:49 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2020-10-12 02:49:10 UTC
Created attachment 166284 [details]
incorrect keys list box fill

Stumbled across this while testing zoom in and zoom out commands in Calc. Same occurs in other modules when Gtk3 is used.

To repro:

1) Menu->Tools->Customize...
2) Keyboard tab page
3) type "zoom" in the Functions search box
4) mouse click on "Zoom" in the Function list box
5) press any alpha (other than z) or numeric key

Results: 
Keys list box fills

Expected results:
Keys list box doesn't fill

Version: 7.1.0.0.alpha0+
Build ID: 0838ef926d187cf9be4f9cc8c992e2ae9893d325
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 pavlog 2020-11-10 19:42:45 UTC
Thank you for reporting the bug. I can not reproduce the bug in

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 91c5642bf0ee48ff91181d779c3a84c768f340df
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL
Comment 2 Jim Raykowski 2020-11-10 23:00:37 UTC
(In reply to pavlog from comment #1)
> Thank you for reporting the bug. I can not reproduce the bug in
> 
> Version: 7.1.0.0.alpha1+ (x64)
> Build ID: 91c5642bf0ee48ff91181d779c3a84c768f340df
> CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL:
> win
> Locale: en-US (en_US); UI: en-US
> Calc: CL

Thanks for confirming that it isn't reproduced using VCL: win

It only occurs with VCL: gtk3
Comment 3 Buovjaga 2020-11-16 10:24:21 UTC
Reproduced.

Arch Linux 64-bit
Version: 7.1.0.0.alpha1+
Build ID: bd3aeaefff5e7bdef10c4702d1f388083557614e
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 15 November 2020
Comment 4 Caolán McNamara 2020-11-16 14:42:26 UTC
I think this is because the internal gtk search unselects the current entry on typing so the command from GetCurCommand is empty
Comment 5 Commit Notification 2020-11-16 20:18:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b92d1d509a1db2179779a4776590734590290a41

tdf#137403 ignore GetCurCommand if its empty

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2020-11-16 20:19:44 UTC
fixed in master, backport to 7-0 in gerrit
Comment 7 Xisco Faulí 2020-11-17 16:09:26 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: 0979798658ff536defe537f57cc6b32278d32414
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 8 Commit Notification 2020-11-17 16:10:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/ea6d3f24e2fd8e5017aad7deffc85012a4c5222b

tdf#137403 ignore GetCurCommand if its empty

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.