tdf#137403 ignore GetCurCommand if its empty

Change-Id: I63cc33c33d36d53d882aae72b8f480ea9842e1b5